--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=3000
 
 # MongoDB Configuration
-MONGODB_URI=mongodb://127.0.0.1:27017/t2yd
+MONGODB_URI=mongodb://127.0.0.1:27017/WorkConnect
 
 # Session Configuration
 SESSION_SECRET=your-session-secret-key-here
